# mygui-taocode

./: CMakeLists.txt
CMake/Utils/: FindPkgMacros.cmake  MyGUIConfigTargets.cmake
Media/MyGUI_Media/: MyGUI_Fonts.xml  MyGUI_GameMiscSkins.xml  MyGUI_GameSkins.xml  MyGUI_GameTemplates.xml  MyGUI_GeneratedFonts.xml  MyGUI_HallSkins.xml  MyGUI_LanguageChineseTag.xml  MyGUI_Layers.xml  MyGUI_LoginSkins.xml  MyGUI_Settings.xml  MyGUI_ShopSkins.xml  MyGUI_SkinList.xml
MyGUIEngine/: CMakeLists.txt  MyGUIEngine.list
MyGUIEngine/include/: MyGUI_ActionController.h  MyGUI_Allocator.h  MyGUI_BiIndexBase.h  MyGUI_Button.h  MyGUI_ChildSkinInfo.h  MyGUI_Common.h  MyGUI_ControllerFadeAlpha.h  MyGUI_ControllerRotate.h  MyGUI_DataStream.h  MyGUI_EditBox.h  MyGUI_EditText.h  MyGUI_FactoryManager.h  MyGUI_FontData.h  MyGUI_FontDataStream.h  MyGUI_FontManager.h  MyGUI_GeometryUtility.h  MyGUI_IDataStream.h  MyGUI_IFont.h  MyGUI_ILayerNode.h  MyGUI_IStateInfo.h  MyGUI_ISubWidget.h  MyGUI_IUnlinkWidget.h  MyGUI_ImageInfo.h  MyGUI_InputConverter.h  MyGUI_InputManager.h  MyGUI_LayerItem.h  MyGUI_LayoutData.h  MyGUI_ListBox.h  MyGUI_LogManager.h  MyGUI_LogSource.h  MyGUI_MaskPickInfo.h  MyGUI_MenuControl.h  MyGUI_MultiListBox.h  MyGUI_PluginManager.h  MyGUI_ResourceImageSetData.h  MyGUI_ResourceManager.h  MyGUI_RotatingSkin.h  MyGUI_ScrollView.h  MyGUI_SubWidgetInfo.h  MyGUI_TSize.h  (+8 more)
MyGUIEngine/src/: MyGUI_ActionController.cpp  MyGUI_BackwardCompatibility.cpp  MyGUI_BiIndexBase.cpp  MyGUI_ControllerManager.cpp  MyGUI_ControllerPosition.cpp  MyGUI_DataMemoryStream.cpp  MyGUI_EditBox.cpp  MyGUI_FontManager.cpp  MyGUI_Gui.cpp  MyGUI_ImageBox.cpp  MyGUI_ListBox.cpp  MyGUI_MenuControl.cpp  MyGUI_PolygonalSkin.cpp  MyGUI_ResourceImageSet.cpp  MyGUI_ResourceManager.cpp  MyGUI_ResourceTrueTypeFont.cpp  MyGUI_RotatingSkin.cpp  MyGUI_ScrollView.cpp  MyGUI_SimpleText.cpp  MyGUI_SkinItem.cpp  MyGUI_TabItem.cpp  MyGUI_TextBox.cpp  MyGUI_TreeControl.cpp  MyGUI_TreeControlItem.cpp  MyGUI_UString.cpp  MyGUI_WidgetInput.cpp
Tools/EditorFramework/: Control.cpp  DataListBaseControl.cpp  DataListBaseControl.h  ListBoxDataControl.cpp  ListBoxDataControl.h
(+138 files in other folders)
